adding simplehtmldom/simplehtmldom

--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -12,6 +12,7 @@
         }
     ],
     "require": {
+        "simplehtmldom/simplehtmldom": "^2.0@RC",
         "npm-asset/codemirror": "5.65.3",
         "npm-asset/inputmask": "5.0.7",
         "npm-asset/intl-tel-input": "17.0.19",
