--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,10 @@
 name: attach development pipeline
 
-on:
-  workflow_call:
-    secrets:
-      terminus_token:
-        required: true
-      sandbox_site_name:
-        required: true
+on: workflow_call
 
 jobs:
   update_and_deploy:
     uses: CuBoulder/action-collection/.github/workflows/sandbox-ci.yml@AlanBCole/issue4
     with:
-      terminus_token: secrets.terminus_token
-      sandbox_site_name: secrets.sandbox_site_name
+      terminus_token: ${{ secrets.terminus_token }}
+      sandbox_site_name: ${{ secrets.sandbox_site_name }}
