calling main branch of actions-collection repo

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,5 +7,5 @@ concurrency:
 
 jobs:
   update_and_deploy:
-    uses: CuBoulder/action-collection/.github/workflows/sandbox-ci.yml@AlanBCole/issue4
+    uses: CuBoulder/action-collection/.github/workflows/sandbox-ci.yml@main
     secrets: inherit
