--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -68,6 +68,7 @@
         "drupal/focal_point": "^2.0",
         "drupal/google_cse": "^4.0",
         "drupal/google_tag": "^2.0",
+        "drupal/jsonapi_extras": "^3.26",
         "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/linkit": "^6.1",
         "drupal/media_alias_display": "^2.0",
