--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -32,6 +32,7 @@
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
+        "cu-boulder/ucb_article_syndication": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
@@ -87,6 +88,7 @@
         "drupal/rebuild_cache_access": "^1.10",
         "drupal/recaptcha_v3": "^2.0",
         "drupal/redirect": "^1.8",
+        "drupal/redis": "^1.8",
         "drupal/responsive_preview": "^2.1",
         "drupal/scheduler": "^2.0",
         "drupal/shortcode": "2.0.2",
