--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -32,6 +32,7 @@
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
+        "cu-boulder/ucb_article_syndication": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
@@ -70,7 +71,7 @@
         "drupal/google_tag": "2.0.6",
         "drupal/jsonapi_extras": "3.26.0",
         "drupal/layout_builder_iframe_modal": "1.3.0",
-        "drupal/linkit": "6.1.5",
+        "drupal/linkit": "6.1.6",
         "drupal/media_alias_display": "2.0.1",
         "drupal/media_entity_file_replace": "1.3.0",
         "drupal/media_file_delete": "1.3.1",
@@ -87,6 +88,7 @@
         "drupal/rebuild_cache_access": "1.12.0",
         "drupal/recaptcha_v3": "2.0.3",
         "drupal/redirect": "1.10.0",
+        "drupal/redis": "1.8.0",
         "drupal/responsive_preview": "2.2.0",
         "drupal/scheduler": "2.1.0",
         "drupal/shortcode": "2.0.2",
@@ -108,7 +110,7 @@
         "consolidation/config": "2.1.2",
         "consolidation/filter-via-dot-access-data": "2.0.2",
         "consolidation/log": "3.1.0",
-        "consolidation/output-formatters": "4.5.0",
+        "consolidation/output-formatters": "4.6.0",
         "consolidation/robo": "4.0.6",
         "consolidation/self-update": "2.2.0",
         "consolidation/site-alias": "4.1.0",
@@ -143,7 +145,7 @@
         "laminas/laminas-escaper": "2.13.0",
         "laminas/laminas-feed": "2.23.0",
         "laminas/laminas-stdlib": "3.19.0",
-        "league/container": "4.2.2",
+        "league/container": "4.2.3",
         "league/uri-interfaces": "7.4.1",
         "masterminds/html5": "2.8.1",
         "mck89/peast": "v1.15.4",
