--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -101,6 +101,7 @@
         "pantheon-systems/drupal-integrations": "^10",
         "pantheon-systems/pantheon_domain_masking": "^2.0",
         "pantheon-systems/upstream-management": "^1.0",
+        "robrichards/xmlseclibs": "3.1.1",
         "simplesamlphp/simplesamlphp": "^2.2",
         "drupal/config_update": "^2.0@alpha"
     },
