--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -67,11 +67,11 @@
         "drupal/features": "^3.14",
         "drupal/field_group": "^3.1",
         "drupal/focal_point": "^2.0",
-        "drupal/google_cse": "^4.0",
+        "drupal/google_cse": "^5.0",
         "drupal/google_tag": "^2.0",
         "drupal/jsonapi_extras": "^3.26",
         "drupal/layout_builder_iframe_modal": "^1.3",
-        "drupal/linkit": "^6.1",
+        "drupal/linkit": "^7.0",
         "drupal/media_alias_display": "^2.0",
         "drupal/media_entity_file_replace": "^1.1",
         "drupal/media_file_delete": "^1.3",
@@ -95,6 +95,7 @@
         "drupal/simple_sitemap": "^4.1",
         "drupal/simplesamlphp_auth": "^4.0",
         "drupal/smtp": "^1.0",
+        "drupal/trash": "^3.0",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.2",
         "drush/drush": "^12.1",
