--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -62,16 +62,16 @@
         "drupal/core-project-message": "10.4.1",
         "drupal/core-recommended": "10.4.1",
         "drupal/devel": "5.3.1",
-        "drupal/entity_embed": "1.6.0",
+        "drupal/entity_embed": "1.7.0",
         "drupal/externalauth": "2.0.7",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.6.0",
         "drupal/focal_point": "2.1.2",
-        "drupal/google_cse": "4.0.0",
+        "drupal/google_cse": "5.0.0",
         "drupal/google_tag": "2.0.8",
         "drupal/jsonapi_extras": "3.26.0",
         "drupal/layout_builder_iframe_modal": "1.3.3",
-        "drupal/linkit": "6.1.6",
+        "drupal/linkit": "7.0.3",
         "drupal/media_alias_display": "2.1.0",
         "drupal/media_entity_file_replace": "1.3.0",
         "drupal/media_file_delete": "1.3.1",
@@ -90,11 +90,12 @@
         "drupal/redirect": "1.11.0",
         "drupal/redis": "1.9.0",
         "drupal/responsive_preview": "2.2.0",
-        "drupal/scheduler": "2.2.0",
+        "drupal/scheduler": "2.2.1",
         "drupal/shortcode": "2.0.2",
         "drupal/simple_sitemap": "4.2.2",
         "drupal/simplesamlphp_auth": "4.0.1",
         "drupal/smtp": "1.4.0",
+        "drupal/trash": "3.0.10",
         "drupal/twig_tweak": "3.4.0",
         "drupal/webform": "6.2.9",
         "drush/drush": "12.5.3",
@@ -172,7 +173,7 @@
         "simplesamlphp/composer-module-installer": "v1.4.0",
         "simplesamlphp/composer-xmlprovider-installer": "v1.0.1",
         "simplesamlphp/saml2": "v4.16.14",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.3.5",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.3.7",
         "simplesamlphp/xml-common": "v1.24.2",
         "simplesamlphp/xml-security": "v1.13.0",
         "symfony/cache": "v6.4.18",
