--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -58,11 +58,12 @@
         "drupal/ckeditor5_icons": "1.1.3",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.10",
-        "drupal/core-composer-scaffold": "10.4.1",
-        "drupal/core-project-message": "10.4.1",
-        "drupal/core-recommended": "10.4.1",
+        "drupal/core-composer-scaffold": "10.4.2",
+        "drupal/core-project-message": "10.4.2",
+        "drupal/core-recommended": "10.4.2",
         "drupal/devel": "5.3.1",
         "drupal/entity_embed": "1.7.0",
+        "drupal/entity_usage": "2.0.0-beta17",
         "drupal/externalauth": "2.0.7",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.6.0",
@@ -95,7 +96,7 @@
         "drupal/simple_sitemap": "4.2.2",
         "drupal/simplesamlphp_auth": "4.0.1",
         "drupal/smtp": "1.4.0",
-        "drupal/trash": "3.0.10",
+        "drupal/trash": "3.0.11",
         "drupal/twig_tweak": "3.4.0",
         "drupal/webform": "6.2.9",
         "drush/drush": "12.5.3",
@@ -126,7 +127,7 @@
         "doctrine/persistence": "4.0.0",
         "drupal/captcha": "2.0.7",
         "drupal/consumers": "1.19.0",
-        "drupal/core": "10.4.1",
+        "drupal/core": "10.4.2",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
@@ -216,7 +217,7 @@
         "symfony/var-exporter": "v6.4.13",
         "symfony/yaml": "v6.4.18",
         "twig/intl-extra": "v3.19.0",
-        "twig/twig": "v3.16.0",
+        "twig/twig": "v3.19.0",
         "webflo/drupal-finder": "1.3.1",
         "webmozart/assert": "1.11.0"
     },
