--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -98,6 +98,7 @@
         "drupal/smtp": "^1.0",
         "drupal/trash": "^3.0",
         "drupal/twig_tweak": "^3.1",
+        "drupal/unpublished_404": "^2.0",
         "drupal/webform": "^6.2",
         "drush/drush": "^12.1",
         "pantheon-systems/drupal-integrations": "^10",
