--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -96,8 +96,9 @@
         "drupal/simple_sitemap": "4.2.2",
         "drupal/simplesamlphp_auth": "4.0.1",
         "drupal/smtp": "1.4.0",
-        "drupal/trash": "3.0.11",
+        "drupal/trash": "3.0.12",
         "drupal/twig_tweak": "3.4.0",
+        "drupal/unpublished_404": "2.0.3",
         "drupal/webform": "6.2.9",
         "drush/drush": "12.5.3",
         "pantheon-systems/drupal-integrations": "10.0.1",
