--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "dev-main",
-        "cu-boulder/boulder_profile": "dev-main",
+        "cu-boulder/boulder_base": "20250219",
+        "cu-boulder/boulder_profile": "20250219",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -36,11 +36,11 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "dev-main",
+        "cu-boulder/ucb_custom_entities": "20250219",
         "cu-boulder/ucb_default_content": "dev-main",
-        "cu-boulder/ucb_drush_commands": "dev-main",
+        "cu-boulder/ucb_drush_commands": "1.0.0",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
-        "cu-boulder/ucb_linkmod": "dev-main",
+        "cu-boulder/ucb_linkmod": "1.0.0",
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
