--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "dev-main",
-        "cu-boulder/boulder_profile": "dev-main",
+        "cu-boulder/boulder_base": "20250219",
+        "cu-boulder/boulder_profile": "20250219",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -36,11 +36,11 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "dev-main",
+        "cu-boulder/ucb_custom_entities": "20250219",
         "cu-boulder/ucb_default_content": "dev-main",
-        "cu-boulder/ucb_drush_commands": "dev-main",
+        "cu-boulder/ucb_drush_commands": "v1.0.0",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
-        "cu-boulder/ucb_linkmod": "dev-main",
+        "cu-boulder/ucb_linkmod": "v1.0.0",
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
@@ -48,7 +48,7 @@
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
         "cweagans/composer-patches": "1.7.3",
-        "drupal/admin_toolbar": "3.5.1",
+        "drupal/admin_toolbar": "3.5.2",
         "drupal/administerusersbyrole": "3.5.0",
         "drupal/aggregator": "2.2.2",
         "drupal/anchor_link": "3.0.0-beta1",
@@ -58,12 +58,12 @@
         "drupal/ckeditor5_icons": "1.1.3",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.10",
-        "drupal/core-composer-scaffold": "10.4.2",
-        "drupal/core-project-message": "10.4.2",
-        "drupal/core-recommended": "10.4.2",
+        "drupal/core-composer-scaffold": "10.4.3",
+        "drupal/core-project-message": "10.4.3",
+        "drupal/core-recommended": "10.4.3",
         "drupal/devel": "5.3.1",
         "drupal/entity_embed": "1.7.0",
-        "drupal/entity_usage": "2.0.0-beta17",
+        "drupal/entity_usage": "2.0.0-beta19",
         "drupal/externalauth": "2.0.7",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.6.0",
@@ -87,7 +87,7 @@
         "drupal/paragraphs": "1.18.0",
         "drupal/pathauto": "1.13.0",
         "drupal/rebuild_cache_access": "1.12.0",
-        "drupal/recaptcha_v3": "2.0.3",
+        "drupal/recaptcha_v3": "2.0.4",
         "drupal/redirect": "1.11.0",
         "drupal/redis": "1.9.0",
         "drupal/responsive_preview": "2.2.0",
@@ -105,7 +105,7 @@
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
         "pantheon-systems/upstream-management": "1.0.1",
         "robrichards/xmlseclibs": "3.1.1",
-        "simplesamlphp/simplesamlphp": "v2.3.5",
+        "simplesamlphp/simplesamlphp": "v2.3.6",
         "drupal/config_update": "2.0.0-alpha4",
         "asm89/stack-cors": "v2.2.0",
         "chi-teck/drupal-code-generator": "3.6.1",
@@ -128,7 +128,7 @@
         "doctrine/persistence": "4.0.0",
         "drupal/captcha": "2.0.7",
         "drupal/consumers": "1.19.0",
-        "drupal/core": "10.4.2",
+        "drupal/core": "10.4.3",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
@@ -146,7 +146,7 @@
         "guzzlehttp/promises": "2.0.4",
         "guzzlehttp/psr7": "2.7.0",
         "justinrainbow/json-schema": "5.3.0",
-        "laminas/laminas-escaper": "2.15.0",
+        "laminas/laminas-escaper": "2.16.0",
         "laminas/laminas-feed": "2.23.0",
         "laminas/laminas-stdlib": "3.20.0",
         "league/container": "4.2.4",
@@ -217,7 +217,7 @@
         "symfony/var-dumper": "v6.4.18",
         "symfony/var-exporter": "v6.4.13",
         "symfony/yaml": "v6.4.18",
-        "twig/intl-extra": "v3.19.0",
+        "twig/intl-extra": "v3.20.0",
         "twig/twig": "v3.19.0",
         "webflo/drupal-finder": "1.3.1",
         "webmozart/assert": "1.11.0"
