--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "20250219",
-        "cu-boulder/boulder_profile": "20250219",
+        "cu-boulder/boulder_base": "20250226",
+        "cu-boulder/boulder_profile": "20250226",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -71,6 +71,7 @@
         "drupal/google_cse": "^5.0",
         "drupal/google_tag": "^2.0",
         "drupal/jsonapi_extras": "^3.26",
+        "drupal/klaro": "^3.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/linkit": "^7.0",
         "drupal/media_alias_display": "^2.0",
