--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "20250219",
-        "cu-boulder/boulder_profile": "20250219",
+        "cu-boulder/boulder_base": "20250226",
+        "cu-boulder/boulder_profile": "20250226",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -48,7 +48,7 @@
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
         "cweagans/composer-patches": "1.7.3",
-        "drupal/admin_toolbar": "3.5.2",
+        "drupal/admin_toolbar": "3.5.3",
         "drupal/administerusersbyrole": "3.5.0",
         "drupal/aggregator": "2.2.2",
         "drupal/anchor_link": "3.0.0-beta1",
@@ -56,14 +56,14 @@
         "drupal/better_social_sharing_buttons": "4.1.0",
         "drupal/ckeditor5_bootstrap_accordion": "1.0.0",
         "drupal/ckeditor5_icons": "1.1.3",
-        "drupal/ckeditor5_paste_filter": "1.0.1",
+        "drupal/ckeditor5_paste_filter": "1.1.0",
         "drupal/consumer_image_styles": "4.0.10",
         "drupal/core-composer-scaffold": "10.4.3",
         "drupal/core-project-message": "10.4.3",
         "drupal/core-recommended": "10.4.3",
         "drupal/devel": "5.3.1",
         "drupal/entity_embed": "1.7.0",
-        "drupal/entity_usage": "2.0.0-beta19",
+        "drupal/entity_usage": "2.0.0-beta21",
         "drupal/externalauth": "2.0.7",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.6.0",
@@ -71,7 +71,8 @@
         "drupal/google_cse": "5.0.0",
         "drupal/google_tag": "2.0.8",
         "drupal/jsonapi_extras": "3.26.0",
-        "drupal/layout_builder_iframe_modal": "1.3.3",
+        "drupal/klaro": "3.0.0",
+        "drupal/layout_builder_iframe_modal": "1.3.4",
         "drupal/linkit": "7.0.3",
         "drupal/media_alias_display": "2.1.0",
         "drupal/media_entity_file_replace": "1.3.0",
@@ -96,7 +97,7 @@
         "drupal/simple_sitemap": "4.2.2",
         "drupal/simplesamlphp_auth": "4.0.1",
         "drupal/smtp": "1.4.0",
-        "drupal/trash": "3.0.12",
+        "drupal/trash": "3.0.13",
         "drupal/twig_tweak": "3.4.0",
         "drupal/unpublished_404": "2.0.3",
         "drupal/webform": "6.2.9",
@@ -133,6 +134,7 @@
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
         "drupal/entity_reference_revisions": "1.12.0",
+        "drupal/klaro_js": "3.0.1",
         "drupal/token": "1.15.0",
         "e0ipso/shaper": "1.2.5",
         "egulias/email-validator": "4.0.3",
@@ -175,26 +177,26 @@
         "simplesamlphp/composer-module-installer": "v1.4.0",
         "simplesamlphp/composer-xmlprovider-installer": "v1.0.1",
         "simplesamlphp/saml2": "v4.16.14",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.3.7",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.3.8",
         "simplesamlphp/xml-common": "v1.24.2",
         "simplesamlphp/xml-security": "v1.13.0",
-        "symfony/cache": "v6.4.18",
+        "symfony/cache": "v6.4.19",
         "symfony/cache-contracts": "v3.5.1",
         "symfony/config": "v6.4.14",
         "symfony/console": "v6.4.17",
-        "symfony/dependency-injection": "v6.4.16",
+        "symfony/dependency-injection": "v6.4.19",
         "symfony/deprecation-contracts": "v3.5.1",
-        "symfony/error-handler": "v6.4.18",
+        "symfony/error-handler": "v6.4.19",
         "symfony/event-dispatcher": "v6.4.13",
         "symfony/event-dispatcher-contracts": "v3.5.1",
         "symfony/filesystem": "v6.4.13",
         "symfony/finder": "v6.4.17",
-        "symfony/framework-bundle": "v6.4.18",
+        "symfony/framework-bundle": "v6.4.19",
         "symfony/http-foundation": "v6.4.18",
-        "symfony/http-kernel": "v6.4.18",
+        "symfony/http-kernel": "v6.4.19",
         "symfony/intl": "v6.4.15",
         "symfony/mailer": "v6.4.18",
-        "symfony/mime": "v6.4.18",
+        "symfony/mime": "v6.4.19",
         "symfony/password-hasher": "v6.4.13",
         "symfony/polyfill-ctype": "v1.31.0",
         "symfony/polyfill-iconv": "v1.31.0",
@@ -205,17 +207,17 @@
         "symfony/polyfill-mbstring": "v1.31.0",
         "symfony/polyfill-php81": "v1.31.0",
         "symfony/polyfill-php83": "v1.31.0",
-        "symfony/process": "v6.4.15",
+        "symfony/process": "v6.4.19",
         "symfony/psr-http-message-bridge": "v6.4.13",
         "symfony/routing": "v6.4.18",
-        "symfony/serializer": "v6.4.18",
+        "symfony/serializer": "v6.4.19",
         "symfony/service-contracts": "v3.5.1",
         "symfony/string": "v6.4.15",
         "symfony/translation-contracts": "v3.5.1",
-        "symfony/twig-bridge": "v6.4.17",
-        "symfony/validator": "v6.4.18",
+        "symfony/twig-bridge": "v6.4.19",
+        "symfony/validator": "v6.4.19",
         "symfony/var-dumper": "v6.4.18",
-        "symfony/var-exporter": "v6.4.13",
+        "symfony/var-exporter": "v6.4.19",
         "symfony/yaml": "v6.4.18",
         "twig/intl-extra": "v3.20.0",
         "twig/twig": "v3.19.0",
