--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,7 +27,7 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "20250312",
+        "cu-boulder/boulder_base": "20250409",
         "cu-boulder/boulder_profile": "20250312",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
@@ -36,7 +36,7 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "20250312",
+        "cu-boulder/ucb_custom_entities": "20250409",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_drush_commands": "v1.0.0",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
@@ -58,21 +58,21 @@
         "drupal/ckeditor5_icons": "1.1.3",
         "drupal/ckeditor5_paste_filter": "1.1.0",
         "drupal/consumer_image_styles": "4.0.10",
-        "drupal/core-composer-scaffold": "10.4.4",
-        "drupal/core-project-message": "10.4.4",
-        "drupal/core-recommended": "10.4.4",
+        "drupal/core-composer-scaffold": "10.4.6",
+        "drupal/core-project-message": "10.4.6",
+        "drupal/core-recommended": "10.4.6",
         "drupal/devel": "5.3.1",
         "drupal/entity_embed": "1.7.0",
-        "drupal/entity_usage": "2.0.0-beta23",
-        "drupal/externalauth": "2.0.7",
+        "drupal/entity_usage": "2.0.0-beta24",
+        "drupal/externalauth": "2.0.8",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.6.0",
         "drupal/focal_point": "2.1.2",
         "drupal/google_cse": "5.0.0",
         "drupal/google_tag": "2.0.8",
         "drupal/jsonapi_extras": "3.26.0",
-        "drupal/klaro": "3.0.2",
-        "drupal/layout_builder_iframe_modal": "1.3.5",
+        "drupal/klaro": "3.0.4",
+        "drupal/layout_builder_iframe_modal": "1.3.6",
         "drupal/linkit": "7.0.3",
         "drupal/media_alias_display": "2.1.0",
         "drupal/media_entity_file_replace": "1.3.0",
@@ -97,11 +97,11 @@
         "drupal/simple_sitemap": "4.2.2",
         "drupal/simplesamlphp_auth": "4.0.1",
         "drupal/smtp": "1.4.0",
-        "drupal/trash": "3.0.14",
+        "drupal/trash": "3.0.16",
         "drupal/twig_tweak": "3.4.0",
         "drupal/unpublished_404": "2.0.3",
         "drupal/webform": "6.2.9",
-        "drush/drush": "12.5.3",
+        "drush/drush": "13.5.1",
         "pantheon-systems/drupal-integrations": "10.0.1",
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
         "pantheon-systems/upstream-management": "1.0.1",
@@ -123,35 +123,37 @@
         "dflydev/dot-access-data": "v3.0.3",
         "doctrine/annotations": "1.14.4",
         "doctrine/common": "3.5.0",
-        "doctrine/deprecations": "1.1.4",
+        "doctrine/deprecations": "1.1.5",
         "doctrine/event-manager": "2.0.1",
         "doctrine/lexer": "2.1.1",
         "doctrine/persistence": "4.0.0",
         "drupal/captcha": "2.0.7",
         "drupal/consumers": "1.19.0",
-        "drupal/core": "10.4.4",
+        "drupal/core": "10.4.6",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
         "drupal/entity_reference_revisions": "1.12.0",
         "drupal/klaro_js": "3.0.1",
         "drupal/token": "1.15.0",
-        "e0ipso/shaper": "1.2.5",
-        "egulias/email-validator": "4.0.3",
+        "e0ipso/shaper": "1.2.7",
+        "egulias/email-validator": "4.0.4",
         "gettext/gettext": "v5.7.3",
-        "gettext/languages": "2.10.0",
+        "gettext/languages": "2.12.1",
         "gettext/translator": "v1.2.1",
         "google/recaptcha": "1.3.0",
         "grasmash/expander": "3.0.1",
         "grasmash/yaml-cli": "3.2.1",
-        "guzzlehttp/guzzle": "7.9.2",
+        "guzzlehttp/guzzle": "7.9.3",
         "guzzlehttp/promises": "2.0.4",
-        "guzzlehttp/psr7": "2.7.0",
-        "justinrainbow/json-schema": "5.3.0",
+        "guzzlehttp/psr7": "2.7.1",
+        "justinrainbow/json-schema": "6.4.1",
         "laminas/laminas-escaper": "2.16.0",
         "laminas/laminas-feed": "2.23.0",
         "laminas/laminas-stdlib": "3.20.0",
+        "laravel/prompts": "v0.3.5",
         "league/container": "4.2.4",
+        "marc-mabe/php-enum": "v4.7.1",
         "masterminds/html5": "2.9.0",
         "mck89/peast": "v1.16.3",
         "nikic/php-parser": "v5.4.0",
@@ -170,30 +172,30 @@
         "psr/http-factory": "1.1.0",
         "psr/http-message": "2.0",
         "psr/log": "3.0.2",
-        "psy/psysh": "v0.12.7",
+        "psy/psysh": "v0.12.8",
         "ralouphie/getallheaders": "3.0.3",
         "sebastian/diff": "4.0.6",
         "simplesamlphp/assert": "v1.8.1",
         "simplesamlphp/composer-module-installer": "v1.4.0",
         "simplesamlphp/composer-xmlprovider-installer": "v1.0.1",
-        "simplesamlphp/saml2": "v4.17.0",
+        "simplesamlphp/saml2": "v4.18.1",
         "simplesamlphp/simplesamlphp-assets-base": "v2.3.9",
         "simplesamlphp/xml-common": "v1.24.2",
         "simplesamlphp/xml-security": "v1.13.0",
-        "symfony/cache": "v6.4.19",
+        "symfony/cache": "v6.4.20",
         "symfony/cache-contracts": "v3.5.1",
         "symfony/config": "v6.4.14",
-        "symfony/console": "v6.4.17",
-        "symfony/dependency-injection": "v6.4.19",
+        "symfony/console": "v6.4.20",
+        "symfony/dependency-injection": "v6.4.20",
         "symfony/deprecation-contracts": "v3.5.1",
-        "symfony/error-handler": "v6.4.19",
+        "symfony/error-handler": "v6.4.20",
         "symfony/event-dispatcher": "v6.4.13",
         "symfony/event-dispatcher-contracts": "v3.5.1",
         "symfony/filesystem": "v6.4.13",
         "symfony/finder": "v6.4.17",
-        "symfony/framework-bundle": "v6.4.19",
+        "symfony/framework-bundle": "v6.4.20",
         "symfony/http-foundation": "v6.4.18",
-        "symfony/http-kernel": "v6.4.19",
+        "symfony/http-kernel": "v6.4.20",
         "symfony/intl": "v6.4.15",
         "symfony/mailer": "v6.4.18",
         "symfony/mime": "v6.4.19",
@@ -207,21 +209,20 @@
         "symfony/polyfill-mbstring": "v1.31.0",
         "symfony/polyfill-php81": "v1.31.0",
         "symfony/polyfill-php83": "v1.31.0",
-        "symfony/process": "v6.4.19",
+        "symfony/process": "v6.4.20",
         "symfony/psr-http-message-bridge": "v6.4.13",
         "symfony/routing": "v6.4.18",
         "symfony/serializer": "v6.4.19",
         "symfony/service-contracts": "v3.5.1",
         "symfony/string": "v6.4.15",
         "symfony/translation-contracts": "v3.5.1",
-        "symfony/twig-bridge": "v6.4.19",
-        "symfony/validator": "v6.4.19",
+        "symfony/twig-bridge": "v6.4.20",
+        "symfony/validator": "v6.4.20",
         "symfony/var-dumper": "v6.4.18",
-        "symfony/var-exporter": "v6.4.19",
-        "symfony/yaml": "v6.4.18",
+        "symfony/var-exporter": "v6.4.20",
+        "symfony/yaml": "v6.4.20",
         "twig/intl-extra": "v3.20.0",
         "twig/twig": "v3.19.0",
-        "webflo/drupal-finder": "1.3.1",
         "webmozart/assert": "1.11.0"
     },
     "config": {
