--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,12 @@
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
+    "autoload": {
+        "psr-4": {
+            "Drupal\\ckeditor5_bootstrap_accordion\\": "web/modules/custom/ckeditor5_bootstrap_accordion/src/",
+            "Drupal\\ckeditor5_icons\\": "web/modules/custom/ckeditor5_icons/src/"
+        }
+    },
     "extra": {
         "drupal-scaffold": {
             "locations": {
