--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "20250409",
-        "cu-boulder/boulder_profile": "20250312",
+        "cu-boulder/boulder_base": "20250423",
+        "cu-boulder/boulder_profile": "20250423",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -36,7 +36,7 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "20250409",
+        "cu-boulder/ucb_custom_entities": "20250423",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_drush_commands": "1.0.0",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
@@ -47,6 +47,8 @@
         "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
+        "cu-boulder/ucb_third_party_libraries": "dev-main",
+        "cu-boulder/ucb_user_invite": "dev-main",
         "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.4",
         "drupal/administerusersbyrole": "^3.4",
@@ -54,8 +56,6 @@
         "drupal/anchor_link": "^3.0@beta",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_bootstrap_accordion": "^1.0",
-        "drupal/ckeditor5_icons": "~1.0",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
         "drupal/core-composer-scaffold": "~10.4.0",
