--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -47,6 +47,8 @@
         "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
+        "cu-boulder/ckeditor5_bootstrap_accordion": "dev-main",
+        "cu-boulder/ckeditor5_icons": "dev-main",
         "cweagans/composer-patches": "1.7.3",
         "drupal/admin_toolbar": "3.5.3",
         "drupal/administerusersbyrole": "3.5.0",
@@ -161,7 +163,7 @@
         "pear/pear_exception": "v1.0.2",
         "phootwork/collection": "v3.2.3",
         "phootwork/lang": "v3.2.3",
-        "phpmailer/phpmailer": "v6.9.3",
+        "phpmailer/phpmailer": "v6.10.0",
         "phpowermove/docblock": "v4.0",
         "psr/cache": "3.0.0",
         "psr/container": "2.0.2",
