--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -27,8 +27,8 @@
         "npm-asset/tippy.js": "6.3.7",
         "npm-asset/northernco--ckeditor5-anchor-drupal": "0.5.0",
         "composer/installers": "v2.3.0",
-        "cu-boulder/boulder_base": "20250423",
-        "cu-boulder/boulder_profile": "20250423",
+        "cu-boulder/boulder_base": "20250514",
+        "cu-boulder/boulder_profile": "20250514",
         "cu-boulder/express_admin": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -36,7 +36,7 @@
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
-        "cu-boulder/ucb_custom_entities": "20250423",
+        "cu-boulder/ucb_custom_entities": "20250514",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_drush_commands": "v1.0.0",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
@@ -58,9 +58,9 @@
         "drupal/better_social_sharing_buttons": "4.1.0",
         "drupal/ckeditor5_paste_filter": "1.1.0",
         "drupal/consumer_image_styles": "4.0.10",
-        "drupal/core-composer-scaffold": "10.4.6",
-        "drupal/core-project-message": "10.4.6",
-        "drupal/core-recommended": "10.4.6",
+        "drupal/core-composer-scaffold": "10.4.7",
+        "drupal/core-project-message": "10.4.7",
+        "drupal/core-recommended": "10.4.7",
         "drupal/devel": "5.3.1",
         "drupal/entity_embed": "1.7.0",
         "drupal/entity_usage": "2.0.0-beta24",
@@ -71,15 +71,15 @@
         "drupal/google_cse": "5.0.1",
         "drupal/google_tag": "2.0.8",
         "drupal/jsonapi_extras": "3.26.0",
-        "drupal/klaro": "3.0.4",
+        "drupal/klaro": "3.0.5",
         "drupal/layout_builder_iframe_modal": "1.3.6",
         "drupal/linkit": "7.0.4",
-        "drupal/media_alias_display": "2.1.0",
+        "drupal/media_alias_display": "2.1.1",
         "drupal/media_entity_file_replace": "1.3.0",
         "drupal/media_file_delete": "1.3.1",
         "drupal/media_library_form_element": "2.1.1",
         "drupal/menu_block": "1.14.0",
-        "drupal/menu_firstchild": "2.1.1",
+        "drupal/menu_firstchild": "2.2.0",
         "drupal/menu_item_extras": "3.1.0",
         "drupal/metatag": "2.1.0",
         "drupal/migrate_plus": "6.0.5",
@@ -106,7 +106,7 @@
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
         "pantheon-systems/upstream-management": "1.0.1",
         "robrichards/xmlseclibs": "3.1.1",
-        "simplesamlphp/simplesamlphp": "v2.3.7",
+        "simplesamlphp/simplesamlphp": "v2.4.0",
         "drupal/config_update": "2.0.0-alpha4",
         "asm89/stack-cors": "v2.2.0",
         "chi-teck/drupal-code-generator": "3.6.1",
@@ -129,7 +129,7 @@
         "doctrine/persistence": "4.0.0",
         "drupal/captcha": "2.0.7",
         "drupal/consumers": "1.19.0",
-        "drupal/core": "10.4.6",
+        "drupal/core": "10.4.7",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.10.0",
@@ -148,8 +148,8 @@
         "guzzlehttp/promises": "2.0.4",
         "guzzlehttp/psr7": "2.7.1",
         "justinrainbow/json-schema": "6.4.1",
-        "laminas/laminas-escaper": "2.16.0",
-        "laminas/laminas-feed": "2.23.0",
+        "laminas/laminas-escaper": "2.17.0",
+        "laminas/laminas-feed": "2.23.1",
         "laminas/laminas-stdlib": "3.20.0",
         "laravel/prompts": "v0.3.5",
         "league/container": "4.2.4",
@@ -157,6 +157,7 @@
         "masterminds/html5": "2.9.0",
         "mck89/peast": "v1.16.3",
         "nikic/php-parser": "v5.4.0",
+        "nyholm/psr7": "1.8.2",
         "pear/archive_tar": "1.5.0",
         "pear/console_getopt": "v1.4.3",
         "pear/pear-core-minimal": "v1.10.16",
@@ -166,6 +167,7 @@
         "phpmailer/phpmailer": "v6.10.0",
         "phpowermove/docblock": "v4.0",
         "psr/cache": "3.0.0",
+        "psr/clock": "1.0.0",
         "psr/container": "2.0.2",
         "psr/event-dispatcher": "1.0.0",
         "psr/http-client": "1.0.3",
@@ -178,14 +180,16 @@
         "simplesamlphp/assert": "v1.8.1",
         "simplesamlphp/composer-module-installer": "v1.4.0",
         "simplesamlphp/composer-xmlprovider-installer": "v1.0.1",
-        "simplesamlphp/saml2": "v4.18.1",
+        "simplesamlphp/saml2": "v5.0.1",
+        "simplesamlphp/saml2-legacy": "v4.18.1",
         "simplesamlphp/simplesamlphp-assets-base": "v2.3.9",
         "simplesamlphp/xml-common": "v1.24.2",
         "simplesamlphp/xml-security": "v1.13.0",
-        "symfony/cache": "v6.4.20",
+        "simplesamlphp/xml-soap": "v1.7.0",
+        "symfony/cache": "v6.4.21",
         "symfony/cache-contracts": "v3.5.1",
         "symfony/config": "v6.4.14",
-        "symfony/console": "v6.4.20",
+        "symfony/console": "v6.4.21",
         "symfony/dependency-injection": "v6.4.20",
         "symfony/deprecation-contracts": "v3.5.1",
         "symfony/error-handler": "v6.4.20",
@@ -193,35 +197,35 @@
         "symfony/event-dispatcher-contracts": "v3.5.1",
         "symfony/filesystem": "v6.4.13",
         "symfony/finder": "v6.4.17",
-        "symfony/framework-bundle": "v6.4.20",
-        "symfony/http-foundation": "v6.4.18",
-        "symfony/http-kernel": "v6.4.20",
-        "symfony/intl": "v6.4.15",
-        "symfony/mailer": "v6.4.18",
-        "symfony/mime": "v6.4.19",
+        "symfony/framework-bundle": "v6.4.21",
+        "symfony/http-foundation": "v6.4.21",
+        "symfony/http-kernel": "v6.4.21",
+        "symfony/intl": "v6.4.21",
+        "symfony/mailer": "v6.4.21",
+        "symfony/mime": "v6.4.21",
         "symfony/password-hasher": "v6.4.13",
         "symfony/polyfill-ctype": "v1.31.0",
         "symfony/polyfill-iconv": "v1.31.0",
         "symfony/polyfill-intl-grapheme": "v1.31.0",
-        "symfony/polyfill-intl-icu": "v1.31.0",
+        "symfony/polyfill-intl-icu": "v1.32.0",
         "symfony/polyfill-intl-idn": "v1.31.0",
         "symfony/polyfill-intl-normalizer": "v1.31.0",
         "symfony/polyfill-mbstring": "v1.31.0",
-        "symfony/polyfill-php81": "v1.31.0",
+        "symfony/polyfill-php81": "v1.32.0",
         "symfony/polyfill-php83": "v1.31.0",
         "symfony/process": "v6.4.20",
         "symfony/psr-http-message-bridge": "v6.4.13",
         "symfony/routing": "v6.4.18",
-        "symfony/serializer": "v6.4.19",
+        "symfony/serializer": "v6.4.21",
         "symfony/service-contracts": "v3.5.1",
-        "symfony/string": "v6.4.15",
+        "symfony/string": "v6.4.21",
         "symfony/translation-contracts": "v3.5.1",
-        "symfony/twig-bridge": "v6.4.20",
-        "symfony/validator": "v6.4.20",
-        "symfony/var-dumper": "v6.4.18",
-        "symfony/var-exporter": "v6.4.20",
-        "symfony/yaml": "v6.4.20",
-        "twig/intl-extra": "v3.20.0",
+        "symfony/twig-bridge": "v6.4.21",
+        "symfony/validator": "v6.4.21",
+        "symfony/var-dumper": "v6.4.21",
+        "symfony/var-exporter": "v6.4.21",
+        "symfony/yaml": "v6.4.21",
+        "twig/intl-extra": "v3.21.0",
         "twig/twig": "v3.19.0",
         "webmozart/assert": "1.11.0"
     },
